# moa-browser

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  README.md  main.cpp
resources/: style.qss
